# dockerfile-partials

./: .dive-ci  .pre-commit-config.yaml  README.md  devcontainer-bake.hcl  test_file
.devcontainer/: devcontainer-bake.hcl  devcontainer.json  initialize
.github/: settings.yml
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: all-layers-image.hcl  commitlint.yaml  pre-commit.yaml  push-workflow.yaml  release-it.yaml
docker-client/: devcontainer-bake.hcl
pre-commit/: Dockerfile  caller.Dockerfile  devcontainer-bake.hcl  on_create_command  pre-commit
pyenv/: Dockerfile  devcontainer-bake.hcl
tmux/: Dockerfile  devcontainer-bake.hcl
useradd/: Dockerfile
uv-project/: Dockerfile  devcontainer-bake.hcl  docker-bake.hcl  on_create_command
uv-project/dummy_pkg/: pyproject.toml  test_dummy_pkg.py
uv-project/dummy_pkg/src/: __init__.py
zsh/: Dockerfile  devcontainer-bake.hcl  on_create_command
